--- a/_python_client/mainwindow.ui
+++ b/_python_client/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>628</width>
-    <height>548</height>
+    <width>678</width>
+    <height>572</height>
    </rect>
   </property>
   <property name="font">
@@ -501,25 +501,112 @@
       </widget>
       <widget class="QWidget" name="tab_7">
        <attribute name="title">
-        <string>Тензодатчики</string>
+        <string>Калибровка ТД</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_15">
-        <item row="3" column="1">
-         <widget class="QPushButton" name="arduino_led_on_button">
+        <item row="0" column="0" colspan="2">
+         <widget class="QPushButton" name="tenz_tare_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>47</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
           <property name="text">
-           <string>Включить диод</string>
+           <string>Установить ноль</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
-         <widget class="QPushButton" name="arduino_led_off_button">
+        <item row="1" column="0">
+         <widget class="QPushButton" name="tenz_sign_weight_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
           <property name="text">
-           <string>Выключить диод</string>
+           <string>Отметить вес [кг]:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1" colspan="2">
-         <widget class="QLineEdit" name="serial_input_ledit"/>
+        <item row="3" column="0" colspan="2">
+         <widget class="QPushButton" name="tenz_calibrate_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>47</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Калибровать</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="tenz_sign_weight_ledit"/>
+        </item>
+        <item row="2" column="0" colspan="2">
+         <widget class="QTableWidget" name="tenz_calibration_table">
+          <property name="rowCount">
+           <number>1</number>
+          </property>
+          <property name="columnCount">
+           <number>2</number>
+          </property>
+          <row/>
+          <column>
+           <property name="text">
+            <string>Масса груза</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Уровень сигнала</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab_9">
+       <attribute name="title">
+        <string>Чтение ТД</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_18">
+        <item row="2" column="0" colspan="2">
+         <widget class="QPushButton" name="pushButton_5">
+          <property name="text">
+           <string>Остановить чтение</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_14">
+          <property name="text">
+           <string>Вес на ТД1: 0 кг</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QWidget" name="widget" native="true"/>
+        </item>
+        <item row="0" column="0" colspan="2">
+         <widget class="QPushButton" name="pushButton_4">
+          <property name="text">
+           <string>Начать чтение</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -613,14 +700,14 @@
           </property>
           <layout class="QGridLayout" name="gridLayout_17">
            <item row="0" column="0">
-            <widget class="QPushButton" name="open_comport_button">
+            <widget class="QPushButton" name="tenz_open_comport_button">
              <property name="text">
               <string>Открыть порт</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QLineEdit" name="port_name_ledit">
+            <widget class="QLineEdit" name="tenz_port_name_ledit">
              <property name="text">
               <string>COM7</string>
              </property>
@@ -769,7 +856,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>628</width>
+     <width>678</width>
      <height>21</height>
     </rect>
    </property>
