--- a/_python_client/mainwindow.ui
+++ b/_python_client/mainwindow.ui
@@ -611,22 +611,22 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="tenz_units_label">
-          <property name="text">
-           <string>Вес на ТД1: 0кг</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QWidget" name="units_graph_widget" native="true"/>
-        </item>
         <item row="0" column="0" colspan="2">
          <widget class="QPushButton" name="tenz_start_units_button">
           <property name="text">
            <string>Начать чтение</string>
           </property>
          </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="UnitsWidget" name="tenz_units_label">
+          <property name="text">
+           <string>___</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="GraphWidget" name="units_graph_gview"/>
         </item>
        </layout>
       </widget>
@@ -722,14 +722,17 @@
            <item row="0" column="0">
             <widget class="QPushButton" name="tenz_open_comport_button">
              <property name="text">
-              <string>Открыть порт</string>
+              <string>Open comport</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QLineEdit" name="tenz_port_name_ledit">
              <property name="text">
-              <string>COM16</string>
+              <string/>
+             </property>
+             <property name="placeholderText">
+              <string>для автопоиска порта оставьте поле пустым</string>
              </property>
             </widget>
            </item>
@@ -883,6 +886,18 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>GraphWidget</class>
+   <extends>QGraphicsView</extends>
+   <header>graphwidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>UnitsWidget</class>
+   <extends>QLabel</extends>
+   <header>unitswidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
