--- a/_python_client/mainwindow.ui
+++ b/_python_client/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>849</width>
-    <height>579</height>
+    <width>863</width>
+    <height>646</height>
    </rect>
   </property>
   <property name="font">
@@ -55,7 +55,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>5</number>
+       <number>6</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -504,59 +504,14 @@
         <string>Калибровка ТД</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_15">
-        <item row="0" column="0" colspan="2">
-         <widget class="QPushButton" name="tenz_tare_button">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>47</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>18</pointsize>
-           </font>
-          </property>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_14">
           <property name="text">
-           <string>Установить ноль</string>
+           <string>Датчик</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QPushButton" name="tenz_sign_weight_button">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Отметить вес [кг]:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0" colspan="2">
-         <widget class="QPushButton" name="tenz_calibrate_button">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>47</height>
-           </size>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>18</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Калибровать</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="tenz_sign_weight_ledit"/>
-        </item>
-        <item row="2" column="0" colspan="2">
+        <item row="4" column="1" colspan="8">
          <widget class="QTableWidget" name="tenz_calibration_table">
           <property name="lineWidth">
            <number>1</number>
@@ -597,6 +552,81 @@
           </column>
          </widget>
         </item>
+        <item row="5" column="1" colspan="8">
+         <widget class="QPushButton" name="tenz_calibrate_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>47</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Калибровать</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QDoubleSpinBox" name="tenz_sign_weight_d_spinbox"/>
+        </item>
+        <item row="0" column="2">
+         <widget class="QSpinBox" name="device_number_spinbox">
+          <property name="keyboardTracking">
+           <bool>false</bool>
+          </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
+          <property name="maximum">
+           <number>20</number>
+          </property>
+          <property name="value">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2" colspan="2">
+         <widget class="QPushButton" name="tenz_sign_weight_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Отметить вес [кг]:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="4" colspan="5">
+         <widget class="QPushButton" name="tenz_tare_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>47</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Установить ноль</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="tab_9">
@@ -604,92 +634,156 @@
         <string>Чтение ТД</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_18">
-        <item row="3" column="1">
-         <widget class="UnitsWidget" name="tenz_units_label_3">
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_17">
           <property name="text">
-           <string>l 3</string>
+           <string>отсчетов / сек</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
-         <widget class="UnitsWidget" name="tenz_units_label_4">
-          <property name="text">
-           <string>l 4</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QCheckBox" name="tenz_checkbox_1">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
+        <item row="7" column="0">
          <widget class="QCheckBox" name="tenz_checkbox_5">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QCheckBox" name="tenz_checkbox_2">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
+        <item row="5" column="0">
          <widget class="QCheckBox" name="tenz_checkbox_3">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
+        <item row="0" column="0" colspan="2">
+         <widget class="QSpinBox" name="sample_rate_spinbox">
+          <property name="layoutDirection">
+           <enum>Qt::RightToLeft</enum>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>100</number>
+          </property>
+          <property name="value">
+           <number>100</number>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="5" colspan="5">
+         <widget class="QPushButton" name="tenz_stop_units_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Остановить чтение</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
          <widget class="QCheckBox" name="tenz_checkbox_4">
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" colspan="4">
+        <item row="3" column="2" rowspan="5" colspan="8">
+         <widget class="GraphWidget" name="units_graph_gview"/>
+        </item>
+        <item row="4" column="0">
+         <widget class="QCheckBox" name="tenz_checkbox_2">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="UnitsWidget" name="tenz_units_label_3">
+          <property name="text">
+           <string>l 3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="0" colspan="5">
          <widget class="QPushButton" name="tenz_start_units_button">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
           <property name="text">
            <string>Начать чтение</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="0" colspan="4">
-         <widget class="QPushButton" name="tenz_stop_units_button">
+        <item row="6" column="1">
+         <widget class="UnitsWidget" name="tenz_units_label_4">
           <property name="text">
-           <string>Остановить чтение</string>
+           <string>l 4</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="UnitsWidget" name="tenz_units_label_1">
+        <item row="0" column="6" colspan="2">
+         <widget class="QLabel" name="label_16">
           <property name="text">
-           <string>l 1</string>
+           <string>измерений на отсчет:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="4" column="1">
          <widget class="UnitsWidget" name="tenz_units_label_2">
           <property name="text">
            <string>l 2</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="3" column="0">
+         <widget class="QCheckBox" name="tenz_checkbox_1">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="8" colspan="2">
+         <widget class="QSpinBox" name="oversampling_spinbox">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>30</number>
+          </property>
+          <property name="value">
+           <number>1</number>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
          <widget class="UnitsWidget" name="tenz_units_label_5">
           <property name="text">
            <string>l 5</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="3" rowspan="5">
-         <widget class="GraphWidget" name="units_graph_gview"/>
+        <item row="3" column="1">
+         <widget class="UnitsWidget" name="tenz_units_label_1">
+          <property name="text">
+           <string>l 1</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -771,7 +865,11 @@
             </widget>
            </item>
            <item row="8" column="1">
-            <widget class="QLineEdit" name="bytes_response_ledit"/>
+            <widget class="QLineEdit" name="bytes_response_ledit">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -782,27 +880,37 @@
            <string>Bluetooth</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_17">
-           <item row="0" column="0">
-            <widget class="QPushButton" name="tenz_open_comports_button">
+           <item row="1" column="0">
+            <widget class="QPushButton" name="tenz_close_comports_button">
              <property name="text">
-              <string>Open comports</string>
+              <string>Close devices</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QLineEdit" name="tenz_port_name_ledit">
+           <item row="0" column="0">
+            <widget class="QPushButton" name="tenz_open_comports_button">
+             <property name="text">
+              <string>Open devices</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1" colspan="2">
+            <widget class="QLineEdit" name="tenz_open_device_ledit">
+             <property name="text">
+              <string>13</string>
+             </property>
+             <property name="placeholderText">
+              <string>Не заполнять для автопоиска. Либо вводите датчики (2, 5, 10)</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1" colspan="2">
+            <widget class="QLineEdit" name="tenz_close_device_ledit">
              <property name="text">
               <string/>
              </property>
              <property name="placeholderText">
-              <string>Оставте пустым для автопоиска. Либо вводите номера (2, 5, 10)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="tenz_close_comports_button">
-             <property name="text">
-              <string>Close comports</string>
+              <string>Не заполнять для отключения всех датчиков</string>
              </property>
             </widget>
            </item>
@@ -949,7 +1057,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>849</width>
+     <width>863</width>
      <height>21</height>
     </rect>
    </property>
